--- a/css/styles.css
+++ b/css/styles.css
@@ -242,3 +242,16 @@ h3 {
 .info-link:active {
     background-color: rgba(30, 144, 255, 0.6);
 }
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) { 
+    .picture-page {
+        background-image: url("../img/hero@2x.jpg");
+    }
+
+}
