--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ html {
     box-sizing: inherit;
 }
 
+*:focus {
+    outline: 3px solid #f75000;
+    outline-offset: 1px;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -24,6 +29,10 @@ body {
 img {
     max-width: 100%;
     height: auto;
+}
+
+a {
+    display: inline-block;
 }
 
 .container {
