--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    background-color: #000;
+    background-color: #f6f6f6;
     font-family: "Bebas Neue", "Arial", sans-serif;
     font-style: normal;
     line-height: 22px;
@@ -49,7 +49,6 @@ a {
 }
 
 .all {
-    height: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -203,6 +202,14 @@ h3 {
     display: flex;
     align-items: center;
     margin-right: 25px;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #888888;
+    text-transform: lowercase;
+    letter-spacing: 0;
 }
 
 .span-time::before {
@@ -218,6 +225,14 @@ h3 {
 .span-seem {
     display: flex;
     align-items: center;
+    font-family: "Roboto Condensed", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #888888;
+    text-transform: lowercase;
+    letter-spacing: 0;
 }
 
 .span-seem::before {
